# excel-mcp

./: .gitignore  CLAUDE.md  README.md  activate-pipx.sh  main.py  plan.md  pyproject.toml
src/: __init__.py  data_discovery.py  file_operations.py
tests/: __init__.py  test_data_discovery.py  test_file_operations.py
